--- a/website/frontend/src/components/CheckAvalibilty/styles.css
+++ b/website/frontend/src/components/CheckAvalibilty/styles.css
@@ -1,18 +1,12 @@
-
-
-.checkAvailability{
-    display: flex;
-    justify-content: start;
-    /* height: auto; */
-    margin-top: -50px;
-    background-color:white;
-    padding: 30px   ;
-    box-shadow:2px 16px 10px 0px rgba(0,0,0,0.1);
+.checkAvailability {
+  display: flex;
+  justify-content: start;
+  /* height: auto; */
+  margin-top: -50px;
+  background-color: white;
+  padding: 30px;
+  box-shadow: 2px 16px 10px 0px rgba(0, 0, 0, 0.1);
 }
-.checkAvailability > *{
-    z-index: 3;
-}
-
-.Toastify__progress-bar {
-    background-color: red; /* Set your desired color */
+.checkAvailability > * {
+  z-index: 3;
 }
