--- a/website/frontend/src/components/ProductHero/style.css
+++ b/website/frontend/src/components/ProductHero/style.css
@@ -1,74 +1,65 @@
-
-
-.wrapper{
-    width: 100%;
-    height: 100vh;
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.image{
-    /* width: 1000px; */
-    width: 100%;
-    position: relative;
-    justify-content: center;
+.image {
+  /* width: 1000px; */
+  width: 100%;
+  position: relative;
+  justify-content: center;
 }
 
-.img > img{
-    width: 100%;
-    display: block;
-    margin: auto;
- 
+.img > img {
+  width: 100%;
+  display: block;
+  margin: auto;
 }
 
-.content{
-    width: 500px;
-    height: 100%;
-    bottom: 0%;
-    left: 50%;
-    position: absolute;
-    background: rgba(0,0,0,0.6);
+.content {
+  /* width: 500px; */
+  height: 100%;
+  bottom: 0%;
+  left: 50%;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.6);
 
-    opacity: 0;
-    transition:  2s;
-    transform: translateX(-50%) translateY(100%);
-    animation: slide-up 0.01s ease forwards !important;
-    text-transform: uppercase;
+  opacity: 0;
+  transition: 2s;
+  transform: translateX(-50%) translateY(100%);
+  animation: slide-up 0.01s ease forwards !important;
+  text-transform: uppercase;
 }
-.content h4{
-  
-    cursor: pointer;
- 
-    color: #fff;
-    margin-bottom: 10px;
-   
+.content h4 {
+  cursor: pointer;
 
-    /* animation: 1500ms ease-in-out 0s normal both 1 running fadeInUp; */
-    /* animation-delay: 1000ms; */
+  color: #fff;
+  margin-bottom: 10px;
+
+  /* animation: 1500ms ease-in-out 0s normal both 1 running fadeInUp; */
+  /* animation-delay: 1000ms; */
 }
 @keyframes slide-up {
-    
-    0% {
-        transform: translateX(-50%) translateY(100%);
-    }
-    100% {
-
-        transform: translateX(-50%) translateY(0);
-    }
+  0% {
+    transform: translateX(-50%) translateY(100%);
+  }
+  100% {
+    transform: translateX(-50%) translateY(0);
+  }
 }
 
 .content:hover {
- 
-    opacity: 1;
+  opacity: 1;
 }
 
-@media screen and (max-width: 500px){
-    .content{
-        width: 100%;
-    }
-    .content h4{
-        font-size: 1.5rem;
-        display: none;
-    }
+@media screen and (max-width: 500px) {
+  .content {
+    width: 100%;
+  }
+  .content h4 {
+    font-size: 1.5rem;
+    display: none;
+  }
 }
