--- a/website/frontend/src/components/RoomAvailable/styles.css
+++ b/website/frontend/src/components/RoomAvailable/styles.css
@@ -1,70 +1,66 @@
-
-
-.RoomAvailable{
-    box-shadow: 2px 16px 10px 0px rgba(0,0,0,0.1);
-    border-radius: 10px;
+.RoomAvailable {
+  box-shadow: 2px 16px 10px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 
-
-
 .image-gallery-container {
-    width: 100%;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
 .thumbnail {
-    width: 100px;
-    height: 100px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    transition: transform 0.2s ease;
+  width: 100px;
+  height: 100px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  transition: transform 0.2s ease;
 }
 .thumbnail:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
 }
 
 .modal button {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    font-size: 14px;
-    border: none;
-    cursor: pointer;
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  font-size: 14px;
+  border: none;
+  cursor: pointer;
 }
 .modal img {
-    max-width: 90%;
-    max-height: 90%;
-    object-fit: contain;
+  max-width: 90%;
+  max-height: 90%;
+  object-fit: contain;
 }
 .modal .close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 18px;
-    color: #fff;
-    cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
 }
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    /* background-color: rgba(0, 0, 0, 0.5); */
-    cursor: pointer;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  cursor: pointer;
 }
