add filter panel in the availability page

--- a/website/frontend/src/components/CheckAvalibilty/styles.css
+++ b/website/frontend/src/components/CheckAvalibilty/styles.css
@@ -1,6 +1,6 @@
 .checkAvailability {
   display: flex;
-  justify-content: start;
+  justify-content: space-between !important;
   /* height: auto; */
   margin-top: -50px;
   background-color: white;
