--- a/website/frontend/src/App.css
+++ b/website/frontend/src/App.css
@@ -5,6 +5,43 @@ html, body {
   overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
+
+/* src/App.css */
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  flex: 1;
+}
+
+.footer {
+  background-color: #143c5c;
+  padding: 20px 0;
+  color: white;
+  margin-top: auto;
+}
+
+
+.root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  flex: 1;
+}
+
+.footer {
+  background-color: #143c5c;
+  padding: 20px 0;
+  color: white;
+  margin-top: auto;
+}
+
 .App {
   text-align: center;
   width: 100vw;
